[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "settlement-reconciliation-skill"
version = "0.1.0"
description = "Lightweight settlement-level reconciliation for marketplace payouts and bank statements."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1"]
yaml = ["PyYAML>=6.0"]
test = ["pytest>=8.0"]

[project.scripts]
settlement-reconcile = "settlement_reconciliation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

